--- a/index.html
+++ b/index.html
@@ -89,9 +89,13 @@
           <img src="photo/13.jpg" alt="photo/ Image 13">
           <img src="photo/14.jpg" alt="photo/ Image 14">
           <img src="photo/15.jpg" alt="photo/ Image 15">
+          <img src="photo/b1.jpg" alt="photo/ Image 16">
+          <img src="photo/b2.jpg" alt="photo/ Image 17">
           <img src="photo/13.jpg" alt="photo/ Image 13">
           <img src="photo/14.jpg" alt="photo/ Image 14">
           <img src="photo/15.jpg" alt="photo/ Image 15">
+          <img src="photo/b1.jpg" alt="photo/ Image 16">
+          <img src="photo/b2.jpg" alt="photo/ Image 17">
         </div>
       </div>
     </div>
@@ -155,5 +159,9 @@
       <p>© 2025 NL Студия Маникюра. Все права защищены.</p>
     </div>
   </footer>
+  <div id="modal" class="modal">
+    <span class="close">&times;</span>
+    <img class="modal-content" id="modalImg">
+</div>
   </body>
 </html>
