--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
   <body>
     <nav class="main-nav">
       <div class="nav-content">
+        <div class="hamburger">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
         <a href="#home">Главная</a>
         <a href="#about">О нас</a>
         <a href="#gallery">Галерея</a>
@@ -111,11 +116,13 @@
       <div class="services-left">
         <h3>Услуги</h3>
         <ul>
-          <li><span class="service-name">Маникюр классический</span><span class="price">1500 ₽</span></li>
-          <li><span class="service-name">Педикюр</span><span class="price">2000 ₽</span></li>
-          <li><span class="service-name">Наращивание ногтей</span><span class="price">3000 ₽</span></li>
-          <li><span class="service-name">Дизайн ногтей</span><span class="price">500 ₽</span></li>
-          <li><span class="service-name">СПА-уход</span><span class="price">1000 ₽</span></li>
+          <li><span class="service-name">Дизайн</span><span class="price">от 500 ₽</span></li>
+          <li><span class="service-name">Пакет "Архитектура"</span><span class="price">от 2000 ₽</span></li>
+          <li><span class="service-name">Пакет "Гигиена"</span><span class="price">от 1200 ₽</span></li>
+          <li><span class="service-name">Пакет "Наращивание"</span><span class="price">от 3000 ₽</span></li>
+          <li><span class="service-name">Пакет "Стандарт"</span><span class="price">от 1500 ₽</span></li>
+          <li><span class="service-name">Пакет "Укрепление"</span><span class="price">от 1700 ₽</span></li>
+          <li><span class="service-name">Пакет "Японский маникюр"</span><span class="price">от 1600 ₽</span></li>
         </ul>
       </div>
       <div class="divider"></div>
@@ -164,5 +171,11 @@
     <span class="close">&times;</span>
     <img class="modal-content" id="modalImg">
 </div>
+ <div id="imageModal" class="modal">
+    <div class="modal-content">
+      <span class="close-button">×</span>
+      <img src="" alt="Увеличенное изображение">
+    </div>
+  </div>
   </body>
 </html>
