--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         <p><strong>Телефон:</strong> <a href="tel:+7-993-102-97-37">+7 (993) 102-97-37</a></p>
         <p><strong>Email:</strong> <a href="mailto:lv.nails@mail.ru">lv.nails@mail.ru</a></p>
         <p><strong>Часы работы:</strong> Пн-Сб: 09:00–21:00, Вс: Выходной</p>
-        <p><strong>Соцсети:</strong> <a href="https:/t.me/Naillavka">Телеграм</a> | <a href="#">ВКонтакте</a></p>
+        <p><strong>Соцсети:</strong> <a href="https://t.me/Naillavka">Телеграм</a> | <a href="#">ВКонтакте</a></p>
       </div>
     </div>
   </section>
